
* Applied patch to fix PDate serialization bug contributed by Jodi Showers

* Added BeforeTE, AfterTE, enhanced TExpr#dates method, RFC2445 (iCalendar) compliance unit test, contributed by Larry Karnowski

* Applied patch by Gordon Thiesfeld which fixes broken Time class compatibility

* Applied patch by Gordon Thiesfeld which allows REWeek expressions to span across two weeks

== Version 0.4.0

* Added DayIntervalTE contributed by Ira Burton which matches every n days past a given date

* Added YearTE requested by Pat Maddox

== Version 0.3.0

* TExpr (finally!) becomes a Module instead of a superclass 

* Added overlap? method for all temporal expressions and DateRange

* Added REMonth expression which matches a range of dates each month
 
* Contributed by Emmett Shear: TExpr#dates method which returns an array of dates occurring within the supplied DateRange

* Rakefile fixes:
  - test path allow gem to be installed with -t switch
  - usage of gzip which will break on Win32

* Removed and then subsequently restored SpecTE

* General clean-up, including:
  - renamed several methods on PDate
  - renamed 'dateprecisiontest.rb' to 'dprecisiontest.rb'

* Fixed Object.id deprecation warning


== Version 0.2.0

* Fixed Schedule class
* Renamed Schedule#is_occurring? to Schedule#include?
* RAA deployment
* GEM deployment
* Renamed file dateprecisiontest.rb to dprecisiontest.rb
* Renamed several methods on PDate:
  - second -> sec
  - minute -> min  
  - hour_of_day -> hour
  - day_of_month -> day

== Version 0.1.0

* Inspired by suggestions[http://blade.nagaokaut.ac.jp/cgi-bin/scat.rb/ruby/ruby-talk/95465] on c.l.r., did massive renaming and refactoring to make source more Ruby-esque:

  - TemporalExpression class => TExpr
  - DatePrecision module => DPrecision (file name changed also)
  - TimePoint class => PDate (file name changed also)
  - Added transparent use of bitwise set operators ( & , | ) for building composite expressions