@@ -38,7 +38,7 @@
 
 * See this mini-TemporalExpression tutorial[http://runt.rubyforge.org/doc/files/doc/tutorial_te_rdoc.html]
 
-* See http://www.chronicj.org/apidocs/index.html for better commented source (JavaDoc)
+* See http://chronicj.digitalclash.com/apidocs/index.html for commented Java source (JavaDoc)
 
 Get in touch if you have questions or if Runt causes your computer to burst into flames...
 
