@@ -1,12 +1,0 @@
-#!/usr/bin/env ruby
-
-# All Runt unit tests
-#
-# Author:: Matthew Lipper
-require 'dprecisiontest'
-require 'temporalexpressiontest'
-require 'pdatetest'
-require 'scheduletest'
-require 'daterangetest'
-require 'runttest'
-require 'icalendartest'
